src/test/resources/amyc/typer/passing/Match1.amy
object Match1
  1 match {
    case _ => ()
  }
end Match1
