src/test/resources/amyc/typer/failing/MatchError6.grading.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int(32)) extends Foo

  abstract class Foo2
  case class Bar2(i: Int(32)) extends Foo2

  Bar(1) match {
    case Bar2(1) => ()
  }
end MatchError
